--- a/requirements.test.txt
+++ b/requirements.test.txt
@@ -1,6 +1,7 @@
 # From our manifest.json for our custom component
 beautifulsoup4==4.11.1
 aiohttp==3.8.1
+tabula-py==2.5.1
 
 # Strictly for tests
 codecov==2.1.12
